[package]
authors = ["Axel Berardino <axel.berardino@gmail.com>"]
description = "Dynamic linting for backend-rs"
edition = "2021"
name = "backend_rs_lint"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
## External
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy/", rev = "eda0b001e87f55f991b14a0073877616f1c12ffb" }
dylint_linting = "2.0"
futures = "0.3"
hashbrown = "0.12"
if_chain = "1.0"
prost = "=0.11"
scylla = "0.4"
tonic = "0.8"
tonic-build = "0.8"
## Internal
errors = { path = "../platform/errors" }

[dev-dependencies]
dylint_testing = "2.0"
tonic-build = "0.8"

[package.metadata.rust-analyzer]
rustc_private = true
