[package]
name = "piretoutpire"
version = "0.1.0"
edition = "2021"
description = "Small custom simplified p2p"

[[bin]]
name = "pire2pire"
path = "src/bin/main.rs"

[dependencies]
## External
clap = { version = "3.0", features = ["derive"] }
colored = "2.0"
crc32fast = "1.3.2"
rand = "0.8"
serde_json = { version = "1.0" }
temp-file = "0.1.7"
tokio = { version = "1", features = ["full"] }
# Internal
errors = { path = "../../platform/errors" }
## Features
serde = { version = "1.0", features = ["derive"] }
